# gdf

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md
include/: app.h  constants.h  events.h  gdf_math.h  hfsm.h  prelude.h  serde.h
include/client/: app.h  client.h  client_settings.h  net.h  services.h  world.h
include/client/graphics/: chunkmesh.h  pipelines.h  renderer.h  textures.h
include/game/: ecs.h  events.h  game.h  hfsm.h  movement.h  net.h  prelude.h  server.h  types.h  ui.h  world.h
include/game/entity/: entity.h  humanoid.h  player.h
include/game/events/: defs.h  structs.h  type_ids.h
include/game/inventory/: inventory.h  item_slot.h
include/game/items/: consumable_info.h  item.h  weapon_info.h
include/game/net/: net.h  packet.h
include/game/physics/: aabb.h  engine.h  physics.h  raycast.h
include/game/settings/: client_settings.h  dev.h  graphics.h  keybinds.h  mouse.h  movement.h
include/graphics/: chunkmesh.h  pipelines.h  renderer.h  textures.h
include/physics/: aabb.h  physics.h  raycast.h
include/render/: chunkmesh.h  game_renderer.h  pipelines.h  textures.h
include/server/: net.h  server.h  world.h
include/services/: events.h  fwd.h  global.h  time.h  ui.h
resources/shaders/: grid.frag  grid.vert
src/: app.c  main.c  main.cpp  temp.c  temp.cpp
src/client/: app.cpp  client.c  client.cpp  client_settings.c  client_settings.cpp  game.cpp  main.cpp  net.cpp  world.cpp
src/client/graphics/: chunkmesh.cpp  pipelines.cpp  renderer.cpp  textures.cpp  world_renderer.cpp
src/game/: events.c  events.cpp  game.c  game.cpp  movement.c  movement.cpp  server.c  server.cpp  ui.cpp
src/game/entity/: humanoid.c  humanoid.cpp
src/game/inventory/: inventory.cpp
src/game/net/: net.c  packet.c
src/game/physics/: engine.cpp  physics.cpp  raycast.cpp
src/game/world/: block.c  block.cpp  chunk.c  chunk.cpp  generator.c  generator.cpp  world.c  world.cpp
src/graphics/: chunkmesh.c  chunkmesh.cpp  pipelines.c  pipelines.cpp  renderer.c  renderer.cpp  textures.c  textures.cpp  world_renderer.cpp
src/physics/: physics.c  physics.cpp  raycast.c  raycast.cpp
src/render/: chunkmesh.c  pipelines.c  textures.c
src/server/: main.cpp  net.cpp  server.cpp
src/services/: events.cpp  global.cpp  time.cpp
